# cmr_people_perception

./: .gitignore  .gitlab-ci.yml  .qglviewer.xml  README.md  cmr_pperception_kinetic.rosinstall
cluster_polygon/: CMakeLists.txt  README.md  package.xml
cluster_polygon/launch/: cluster_polygon.launch
cluster_polygon/params/: human1_train.yaml  polygon_slow.yaml  polygon_stop.yaml
cluster_polygon/src/: cluster_polygon.cpp
cmr_bt_people/: CMakeLists.txt  README.md  cmr_bt_people_tree_nodes.xml  package.xml
cmr_bt_people/include/cmr_bt_people/: conditions.h
cmr_bt_people/src/: conditions.cpp
cmr_people_perception/: CMakeLists.txt  INSTALL_NOTES_GER.md  README.md  package.xml
cmr_people_perception/launch/: darknet_projection.launch  darknet_ros.launch  face_cnn.launch  face_knn.launch  people_perception.launch  tensorflow_back.launch  tensorflow_front.launch
cmr_people_perception/params/: darknet_projection_back_params.yaml  darknet_projection_front_params.yaml  darknet_ros_back.yaml  darknet_ros_front.yaml  face_cnn_params.yaml  face_knn_params.yaml  projection_back_params.yaml  projection_front_params.yaml  tensorflow_rgbd_back_params.yaml  tensorflow_rgbd_front_params.yaml
cmr_people_perception/scripts/: install_dependencies.sh
cmr_people_perception/test/: get_bag.sh  people_perception.test  test_people_perception.cpp
guiding_utils/: CMakeLists.txt  README.md  package.xml
guiding_utils/include/: detection_com.h
guiding_utils/include/rotate_image_pet/: message_republisher.h
guiding_utils/launch/: message_republisher.launch
guiding_utils/src/: bounding_box.py  chat.py  chat2.py  detection_com.cpp  message_republisher.cpp  projection.py  projection_darknet.py  rotate_image.cpp  save_path.py
object3d_detector/: CMakeLists.txt  README.md  package.xml
object3d_detector/launch/: cluster_node.launch  object3d_detector.launch  object3d_detector_fast.launch  show_pcd.launch  start_velodyn_driver.launch
object3d_detector/libsvm/: pedestrian_test.model  pedestrian_test_multi.model  pedestrian_test_multi_fast.model  pedestrian_test_multi_fast_21_09.model  pedestrian_test_multi_new.model  pedestrian_test_multi_new_21_09.model  range_test  range_test_multi  range_test_multi_fast  range_test_multi_fast_21_09  range_test_multi_new  range_test_multi_new_21_09
object3d_detector/src/: cluster_node.cpp  object3d_detector.cpp  object3d_detector_fast.cpp  show_pcd.cpp  training_ob_multi.cpp  training_ob_multi_fast.cpp
object3d_detector/traning/: .qglviewer.xml  grid.py
sg_msgs/: CMakeLists.txt  package.xml
sg_msgs/action/: empty.action
sg_msgs/msg/: DetectedPersonsOdom.msg  PointCloudArray.msg  PolygonArray.msg
sg_msgs/srv/: chatai_srv.srv  empty.srv  face_reco_serv.srv
