<?xml version="1.0"?>
<package>
  <name>guiding_utils</name>
  <version>0.0.0</version>
  <description>utils</description>
  <maintainer email="alex.peter91@gmail.com">Alex</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>bayes_tracking</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>cmr_msgs</build_depend>
  <build_depend>sg_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>bayes_tracking</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>cob_perception_msgs</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>cmr_msgs</run_depend>
 <run_depend>sg_msgs</run_depend>

</package>
