<?xml version="1.0"?>
<package format="2">
<name>sg_msgs</name>
<version>0.0.0</version>
<description>The sg_msgs package</description>
<maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
<license>GPLv3</license>
<author email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</author>

<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>std_srvs</depend>
<depend>sensor_msgs</depend>
<depend>actionlib_msgs</depend>
<depend>geometry_msgs</depend>
<depend>spencer_tracking_msgs</depend>
<depend>message_generation</depend>
<depend>message_runtime</depend>
<export>


</export>
</package>
